# risk-metrics-engine

./: .gitignore  README.md  pyproject.toml
data/: coverage_grid_spy.csv  coverage_grid_spy_oos.csv  long_pnl.csv  price_SPY.csv  sample_pnl.csv
notebooks/: 00_environment_check.ipynb  01_demo.ipynb  01_pandas_time_series_basics.ipynb  02_backtesting_kupiec_pof.ipynb  03_oos_backtest_and_coverage_grid.ipynb  04_rolling_es_severity_backtest.ipynb  ML_01_extreme_loss_baseline.ipynb
notes/: ENGINEERING_LOG.md  EXPERIMENTS_LOG.md  LEARNING_NOTES.md  ML_CONCEPTS.md  RISK_CONCEPTS.md
scripts/: analysis_demo.py  backtest_demo.py  ml_extreme_loss_baseline.py  ml_extreme_loss_lags.py  plot_backtest.py  plot_coverage_grid.py  run_coverage_grid.py  run_coverage_grid_oos.py
src/riskmetrics/: backtest.py  cli.py  es.py  ml.py  var.py
tests/: test_backtest.py  test_es.py  test_var.py  test_walk_forward.py
